--- a/public/index.html
+++ b/public/index.html
@@ -28,9 +28,9 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <header id="header">
+    <div id="root">
       
-    </header>
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
